jobber-k8s/18-network-policies.yaml/gig-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-users-to-gig
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: jobber-gig
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: jobber-users
        - podSelector:
            matchLabels:
              app: jobber-gateway
