jobber-k8s/18-network-policies.yaml/order-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-review-to-order
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: jobber-order
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: jobber-review
        - podSelector:
            matchLabels:
              app: jobber-gateway 
        - podSelector:
           matchLabels:
             app.kubernetes.io/name: prometheus
             app.kubernetes.io/component: server 
        - podSelector:
            matchLabels:
              k8s-app: metricbeat   
        - podSelector:
            matchLabels:
              k8s-app: heartbeat
