jobber-k8s/18-network-policies.yaml/user-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-auth-order-gig-review-to-users
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: jobber-users
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: jobber-auth
        - podSelector:
            matchLabels:
              app: jobber-order
        - podSelector:
            matchLabels:
              app: jobber-gig
        - podSelector:
            matchLabels:
              app: jobber-review
        - podSelector:
            matchLabels:
              app: jobber-gateway
